--- a/force-app/main/default/lwc/productCard/productCard.html
+++ b/force-app/main/default/lwc/productCard/productCard.html
@@ -57,7 +57,7 @@
                 <section>ブレーキ</section>
                 <div class="row">
                     <div>前輪:</div>
-                    <div>油圧ディスク, 200mm</div>
+                    <div>{product.data.fields.Front_Brakes__c.value}</div>
                 </div>
                 <div class="row">
                     <div>後輪:</div>
