--- a/force-app/main/default/lwc/productCard/productCard.html
+++ b/force-app/main/default/lwc/productCard/productCard.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="row">
                     <div>後輪:</div>
-                    <div>油圧ディスク, 200mm</div>
+                    <div>{product.data.fields.Rear_Brakes__c.value}</div>
                 </div>
             </div>
         </template>
